appcache, webrtc, and various cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
+<html dir="ltr" lang="en-US" manifest="appcache.manifest">
   <head>
     <meta charset="utf-8">
     <title>Code Challenge</title>
@@ -27,7 +27,5 @@
       </object>
     </main>
     <script src="track.js"></script>
-    <iframe id="iframe" sandbox="allow-same-origin" style="display:none;"></iframe>
-    <script src="webrtc-ips.js"></script>
   </body>
 </html>
