--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,33 @@
 <html dir="ltr" lang="en-US" manifest="appcache.manifest">
   <head>
     <meta charset="utf-8">
-    <title>Code Challenge</title>
+    <title>Device Tracking</title>
     <meta name="viewport" content="width=device-width">
     <meta name="robots" content="noindex,noarchive">
   </head>
   <body>
     <header>
-      <h1>Code Challenge</h1>
+      <h1>Device Tracking</h1>
     </header>
     <main>
       <noscript>Please enable JavaScript. ;)</noscript>
-      <object width="1" height="1"
+      <object width="0" height="0"
               data="data:application/x-silverlight-2,"
               type="application/x-silverlight-2">
         <param name="source" value="IsolatedStorage.xap">
         <param name="onerror" value="silverlightError">
         <param name="onLoad" value="silverlightLoaded">
       </object>
-      <object height="1" width="1" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab" id="SharedObjects" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
+      <object height="0" width="0" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab" id="SharedObjects" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
         <param name="movie" value="SharedObjects.swf">
         <param name="FlashVars" value="namespace=SharedObjects">
         <param name="allowScriptAccess" value="always">
-        <embed height="1" align="middle" width="1" pluginspage="https://www.macromedia.com/go/getflashplayer" flashvars="namespace=SharedObjects" type="application/x-shockwave-flash" allowscriptaccess="always" quality="high" loop="false" play="true" name="SharedObjects" bgcolor="#ffffff" src="SharedObjects.swf">
+        <embed height="0" align="middle" width="0" pluginspage="https://www.macromedia.com/go/getflashplayer" flashvars="namespace=SharedObjects" type="application/x-shockwave-flash" allowscriptaccess="always" quality="high" loop="false" play="true" name="SharedObjects" bgcolor="#ffffff" src="SharedObjects.swf">
       </object>
     </main>
+    <footer>
+        <p>For more information, see the <a href="">README</a> in the <a href="">GitHub repository</a>.</p>
+    </footer>
     <script src="track.js"></script>
   </body>
 </html>
