--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       </object>
     </main>
     <footer>
-        <p>For more information, see the <a href="">README</a> in the <a href="">GitHub repository</a>.</p>
+        <p>For more information, see the <a href="https://github.com/steboo/device-tracking/blob/master/README.md">README</a> in the <a href="https://github.com/steboo/device-tracking">GitHub repository</a>.</p>
     </footer>
     <script src="track.js"></script>
   </body>
